# internal/dto/dto.go
@@ -193,3 +193,9 @@ type DeviceComponentDto struct {
 	Mappings      []MappingDto         `json:"mappings"`
 	Children      []DeviceComponentDto `json:"children"`
 }
+
+type DefaultConfigurationDto struct {
+	ID              int64               `json:"id" example:"1"`
+	Indicator       *DeviceIndicatorDto `json:"indicator,omitempty" extensions:"x-nullable"`
+	DeviceComponent *DeviceComponentDto `json:"device_component,omitempty" extensions:"x-nullable"`
+}
